fix whitespace underline

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ p, dl {
     margin-top: 0;
     margin-bottom: 1rem;
 }
+a {
+    text-decoration: none;
+}
 
 /* page spacing */
 .material-icons {
